src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__transfers__transfer_in_preflight.snap
---
source: src/adapters/cli/output/tests/transfers.rs
expression: "String::from_utf8(preflight)?"
---
Transfer preflight:
  To account: @alice (ID 123)
  Direction: in
  Amount: $12.34
  Source: Synthetic Bank (bank ending 1111, ID source-1)
  Estimate: 1-3 business days
  Request source: funds-in; instant: false
  Warning: this unsupported private add-funds API must never be retried after an uncertain outcome.
