src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__transfers__transfer_in_result.snap
---
source: src/adapters/cli/output/tests/transfers.rs
expression: "String::from_utf8(completed)?"
---
Payout ID: payout-1
Status: pending
Direction: in
Requested amount: $12.34
Expected completion: 1969-12-31T16:00:00
Source ID: source-1
Pending means accepted by Venmo, not settled or available in the balance.
