src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__transfers__transfer_options.snap
---
source: src/adapters/cli/output/tests/transfers.rs
expression: output
---
 SPEED    | DIRECTION | ID            | NAME          | ASSET    | TYPE | LAST4 | DEFAULT | ESTIMATED COMPLETION
----------+-----------+---------------+---------------+----------+------+-------+---------+----------------------
 standard | in        | source-1      | Inbound\nBank | Checking | bank | 1111  | yes     | 1-3 business days
 standard | out       | destination-1 | Outbound Bank | Checking | bank | 2222  | yes     | 1-3 business days
