src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__transfers__transfer_out_all_details.snap
---
source: src/adapters/cli/output/tests/transfers.rs
expression: "String::from_utf8(all_details)?"
---
Transfer details:
  From account: @alice (ID 123)
  Direction: out
  Speed: standard
  Amount: $100.00
  Amount source: all available Venmo balance from this fresh snapshot (on-hold funds excluded)
  Available Venmo balance: $100.00
  Destination: Synthetic Bank (bank ending 2222, ID destination-all)
  Estimate: 1-3 business days
  Submitted amount and final amount: identical integer cents
  Warning: `all` resolves once from this snapshot and is not an atomic account drain.
  Warning: this unsupported private transfer API must never be retried after an uncertain outcome.
