src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__transfers__transfer_out_preflight.snap
---
source: src/adapters/cli/output/tests/transfers.rs
expression: "String::from_utf8(preflight)?"
---
Transfer preflight:
  From account: @alice (ID 123)
  Direction: out
  Speed: standard
  Amount: $12.34
  Available Venmo balance: $100.00
  Destination: Synthetic Bank (bank ending 2222, ID destination-1)
  Estimate: 1-3 business days
  Submitted amount and final amount: identical integer cents
  Warning: this unsupported private transfer API must never be retried after an uncertain outcome.
